force-app/main/default/objects/Cherry_User__c/Cherry_User__c.object-meta.xml
<CustomObject>
    <label>Cherry User</label>
    <nameField>
        <label>Cherry User</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cherry Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>