force-app/main/default/objects/Cherry_User__c/fields/Cherry_Box_Name__c.field-meta.xml
<CustomField>
    <fullName>Cherry_Box_Name__c</fullName>
    <label>Cherry Box Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>