force-app/main/default/objects/Cherry_User__c/fields/Sales_office__c.field-meta.xml
<CustomField>
    <fullName>Sales_office__c</fullName>
    <formula>User__r.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales office</label>
    <type>Text</type>
</CustomField>